<resources>

    <string name="app_name">Mediconnect</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Login">Login</string>


    <string name="speciality">Speciality</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>


    <string name="lets_get_started">Let\'s Get Started</string>"

    <string name="before_we_begin">Before We Begin</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="lets_set_up_your_profile">Let\'s set up your profile</string>
    <string name="lets_set_up_your_professional_profile">Let\'s set up your professional profile</string>
    <string name="name">name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>"


    <string name="password">Password</string>
    <string name="phoneNumber">PhoneNumber</string>

    <string name="email">Email</string>

    <string name="sign_in_description_text">Login with Google Account</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_my_appointment">My Appointment</string>
    <string name="nav_my_appointment_history">My Appointment History</string>
    <string name="nav_medical_log">Medical Log</string>
    <string name="nav_basic_monitoring">Basic Monitoring</string>"
    <string name="nav_services">Services</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_patent_feedback">Patent Feedback</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>
    <string name="Doctor_Appointment_History">Doctor Appointment History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_appointment_title">My Appointment </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appointment_history_title">Appointment History</string>


    <string name="default_web_client_id">1071465062452-ivd1srad1l8c39v7u79t48f4pkte1pna.apps.googleusercontent.com</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="doctor_feedback_title">"Patient Rates "</string>
    <string name="reschedule_title">Reschedule</string>
    <string name="medical_log_title">Medical_log_title</string>
    <string name="start_teleconsultation">Start Teleconsultation</string>
    <string name="doctor_schedule">Doctor Schedule</string>

    <string-array name="time_slots">
        <item>12:00 AM</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
    </string-array>


    <string-array name="months_array">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>



</resources>