<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
        />

        <item
            android:id="@+id/nav_my_appointment"
            android:title="@string/nav_my_appointment"
            android:icon="@drawable/appointment"
            />

        <item
            android:id="@+id/nav_my_appointment_history"
            android:title="@string/nav_my_appointment_history"
            android:icon="@drawable/nav_my_appointment_history"
            />

        <item
            android:id="@+id/nav_medical_log"
            android:title="@string/nav_medical_log"
            android:icon="@drawable/medicallogs"
            />

        <item
            android:id="@+id/nav_basic_monitoring"
            android:title="@string/nav_basic_monitoring"
            android:icon="@drawable/basic_monitoring"
            />

        <item
            android:id="@+id/nav_patent_feedback"
            android:title="@string/nav_patent_feedback"
            android:icon="@drawable/feedback"
            />

        <item
            android:id="@+id/nav_services"
            android:title="@string/nav_services"
            android:icon="@drawable/service"
            />

        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
             />

    </group>

</menu>